fix: text alignment to center for looking for cfd's link

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -241,9 +241,11 @@
     }
 
     &__tradershub-link {
-        padding: 1.2rem 2.5rem 0.6rem 0;
         background: var(--du-general-main-2);
         color: var(--text-prominent);
+        padding: 1rem;
+        display: flex;
+        justify-content: center;
     }
 
     &__footer {
